# rusttracks-reporter

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.tracker  Dockerfile.web  README.md
migrations/2022-07-15-172456_location/: down.sql  up.sql
rusttracks-contrib/: Cargo.toml
rusttracks-contrib/src/: lib.rs  models.rs  schema.rs  utils.rs
rusttracks-recorder/: .dockerignore  Cargo.toml  Dockerfile
rusttracks-recorder/migrations/2022-07-15-172456_location/: up.sql
rusttracks-recorder/migrations/2022-07-20-094536_location/: up.sql
rusttracks-recorder/src/: lib.rs  main.rs  schema.rs
rusttracks-web/: Cargo.toml  package-lock.json  package.json  webpack.config.js
rusttracks-web/js/: index.js
rusttracks-web/src/: main.rs  routes.rs
rusttracks-web/static/: index.css  index.html  main.js
src/: lib.rs  location.rs  main.rs  models.rs  schema.rs
