[package]
name = "rusttracks-recorder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = "0.11"
async-std = "1.12.0"
futures = "0.3.21"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
rusqlite = "0.27.0"