[package]
name = "rusttracks-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
futures = "0.3.21"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2", "numeric"] }
diesel_migrations = "1.4.0"
libsqlite3-sys = { version = "*", features = ["bundled"] }
openssl = "*"
openssl-probe = "0.1.2"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
tokio = { version = "1.20.0", features = ["full"] }
rusttracks-contrib = { path="../rusttracks-contrib"}

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = ["diesel_sqlite_pool"]
